[tool.poetry]
name = "pydui-gtk"
version = "0.1.0"
description = "Wrap PyGObject into a DuiLib-style UI library"
authors = ["dzhsurf <dzhsurf@gmail.com>"]
keywords = ["duilib", "pygobject", "gtk"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/dzhsurf/pydui"
repository = "https://github.com/dzhsurf/pydui"
include = [ "LICENSE" ]
packages = [
	{ include = "pydui", from = "src" }
]
exclude = [ "**/*.pyc", "**/*.pyi" ]

[tool.poetry.dependencies]
python = "^3.9"
gobject = "^0.1.0"
pycairo = "^1.21.0"
pygobject = "^3.42.2"
asyncio = "^3.4.3"
pynoticenter = "^0.1.6"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
sphinx = "^5.1.1"
sphinx-intl = "^2.0.1"
sphinx-press-theme = "^0.8.0"
myst_parser = "^0.18.0"
recommonmark = "^0.7.1"
sphinx_autoapi = "^1.9.0"
meson = "^0.63.2"
ninja= "^1.10.2.3"

[tool.poetry.scripts]
demo = "src.example.demo:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

